update sidevar menu

--- a/client_Dashboard.html
+++ b/client_Dashboard.html
@@ -33,7 +33,7 @@
                 </a>
                 <hr class="solid-divider">
 
-                <a class="nav-link mt-3 active_sidnav" href="#">
+                <a class="nav-link mt-3 active_sidnav nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                         <span class=" ml-2"> Dashboard</span>
@@ -42,46 +42,51 @@
 
 
                 <!-- setup dropdown menu start  -->
-                <div id="Setup">
-                    <a class="nav-link" id="setup-link">
+                <div class="dropdowns_menu nav-sidevar-link">
+                    <a class="nav-link">
                         <div class="link-icon">
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                            <span class=" ml-2">
+                            <span class="ml-2">
                                 Setup
                             </span>
-                            <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
-                        </div>
-                    </a>
-                </div>
-                <div class="setup-menu">
-                    <a class="nav-link nav-sidevar-link" href="ftp_list.html" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="favorit_number.html" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Billing Setup</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Instruction Path</span>
+                            <span class="report-icon">
+                                <i class="fa-solid fa-caret-right fa-lg" style="color: #eaecf0;"></i>
+                            </span>
                         </div>
                     </a>
 
+                    <div class="dropdowns_sub_menu mb-3">
+                        <a class="nav-link" href="ftp_list.html" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="favorit_number.html" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Billing Setup</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Instruction Path</span>
+                            </div>
+                        </a>
+                    </div>
+
+
 
                 </div>
+
                 <!-- setup dropdown menu end  -->
                 <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
@@ -133,42 +138,45 @@
                 </a>
 
                 <!-- report dropdown memu start  -->
-                <div id="report">
-                    <a class="nav-link" id="report-link">
+                <div class="dropdowns_menu nav-sidevar-link">
+                    <a class="nav-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
-                                id="active-sidebar-icon-image">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                             <span class="sidebar-link-text ml-2">
-                               Report
+                                Report
                             </span>
-                            <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
+                            <span class="report-icon">
+                                <i class="fa-solid fa-caret-right fa-lg" style="color: #eaecf0;"></i>
+                            </span>
                         </div>
                     </a>
-                </div>
-                <div class="client-sumarry">
-                    <a class="nav-link nav-sidevar-link" href="client_project_report_samary.html" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Now Client History</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Year Wise Client</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Loss Client</span>
-                        </div>
-                    </a>
+                    <div class="dropdowns_sub_menu mb-3">
+                        <a class="nav-link" href="client_project_report_samary.html"
+                            id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Now Client History</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Year Wise Client</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Loss Client</span>
+                            </div>
+                        </a>
 
 
+                    </div>
                 </div>
+
                 <!-- report dropdown memu end  -->
 
             </div>
@@ -283,24 +291,26 @@
                         <div>
                             <p class="time-table">1,60,540</p>
                         </div>
-                        <div class="d-flex justify-content-between  client-drop-button">
-                            <div class="clientD_btn" id="clientD_btn1">
-                                Total Client
-                            </div>
-                            <div class="card-bottom-icon">
-                                <img src="assets/Manager-deshboard/Medium.png" alt="">
-                            </div>
+                        <div class="clientD_btn">
+                            <div class="d-flex justify-content-between  client-drop-button">
+                                <div class="card_drop_btn">
+                                    Total Client
+                                </div>
+                                <div class="card-bottom-icon">
+                                    <img src="assets/Manager-deshboard/Medium.png" alt="">
+                                </div>
 
-                        </div>
-                        <div class="client_desboard_dropdown common_client">
-                            <div class="Invoice_link mb-2">
-                                <a href="" class="active_text">Total Client</a>
                             </div>
-                            <div class="mb-2">
-                                <a href="">Total Active Client</a>
-                            </div>
-                            <div class="mb-1">
-                                <a href="">Total Inactive Client</a>
+                            <div class="client_desboard_dropdown card_drop_menu_link">
+                                <div class="Invoice_link mb-2">
+                                    <a href="" class="active_text">Total Client</a>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="">Total Active Client</a>
+                                </div>
+                                <div class="mb-1">
+                                    <a href="">Total Inactive Client</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -319,26 +329,28 @@
                         <div>
                             <p class="time-table">75</p>
                         </div>
-                        <div class="d-flex justify-content-between">
-                            <div class="clientD_btn" id="clientD_btn2">
-                                Total Invoice Sent
-                            </div>
-                            <div class="card-bottom-icon">
-                                <img src="assets/Manager-deshboard/Medium.png" alt="">
-                            </div>
+                        <div class="clientD_btn">
+                            <div class="d-flex justify-content-between">
+                                <div class="card_drop_btn">
+                                    Total Invoice Sent
+                                </div>
+                                <div class="card-bottom-icon">
+                                    <img src="assets/Manager-deshboard/Medium.png" alt="">
+                                </div>
 
-                        </div>
-                        <div class="client_desboard_dropdown2 common_client">
-
-                            <div class="Invoice_link mb-2">
-                                <a href="" class="active_text">Total Invoice Sent</a>
                             </div>
+                            <div class="client_desboard_dropdown card_drop_menu_link">
 
-                            <div class="mb-2">
-                                <a href="">Total Payment Received</a>
-                            </div>
-                            <div>
-                                <a href="" class="mb-1">Total Payment pending</a>
+                                <div class="Invoice_link mb-2">
+                                    <a href="" class="active_text">Total Invoice Sent</a>
+                                </div>
+
+                                <div class="mb-2">
+                                    <a href="">Total Payment Received</a>
+                                </div>
+                                <div>
+                                    <a href="" class="mb-1">Total Payment pending</a>
+                                </div>
                             </div>
                         </div>
 
@@ -358,29 +370,31 @@
                             <p class="time-table">75</p>
                         </div>
 
-                        <div class="d-flex justify-content-between ">
-                            <div class="clientD_btn" id="clientD_btn3">
-                                This Year
-                            </div>
-                            <div class="card-bottom-icon">
-                                <img src="assets/Manager-deshboard/Medium.png" alt="">
-                            </div>
+                        <div class="clientD_btn">
+                            <div class="d-flex justify-content-between ">
+                                <div class="card_drop_btn" id="clientD_btn3">
+                                    This Year
+                                </div>
+                                <div class="card-bottom-icon">
+                                    <img src="assets/Manager-deshboard/Medium.png" alt="">
+                                </div>
 
-                        </div>
-                        <div class="client_desboard_dropdown3 common_client">
+                            </div>
+                            <div class="client_desboard_dropdown card_drop_menu_link">
 
-                            <div class="Invoice_link mb-2">
-                                <a href="" class="active_text">This Year</a>
-                            </div>
+                                <div class="Invoice_link mb-2">
+                                    <a href="" class="active_text">This Year</a>
+                                </div>
 
-                            <div class="mb-2">
-                                <a href="">Converted Test Clients</a>
-                            </div>
-                            <div class="mb-2">
-                                <a href="">Test Clients On Hold</a>
-                            </div>
-                            <div class="mb-2">
-                                <a href="" class="mb-1">Test Cancele</a>
+                                <div class="mb-2">
+                                    <a href="">Converted Test Clients</a>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="">Test Clients On Hold</a>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="mb-1">Test Cancele</a>
+                                </div>
                             </div>
                         </div>
 
@@ -400,29 +414,31 @@
                             <p class="time-table">06</p>
                         </div>
 
-                        <div class="d-flex justify-content-between ">
-                            <div class="clientD_btn" id="clientD_btn4">
-                                Total Images Process
-                            </div>
-                            <div class="card-bottom-icon">
-                                <img src="assets/Manager-deshboard/Medium.png" alt="">
-                            </div>
+                        <div class="clientD_btn">
+                            <div class="d-flex justify-content-between ">
+                                <div class="card_drop_btn">
+                                    Total Images Process
+                                </div>
+                                <div class="card-bottom-icon">
+                                    <img src="assets/Manager-deshboard/Medium.png" alt="">
+                                </div>
 
-                        </div>
-                        <div class="client_desboard_dropdown4 common_client">
+                            </div>
+                            <div class="client_desboard_dropdown card_drop_menu_link">
 
-                            <div class="Invoice_link mb-2">
-                                <a href="" class="active_text">This Year</a>
-                            </div>
+                                <div class="Invoice_link mb-2">
+                                    <a href="" class="active_text">This Year</a>
+                                </div>
 
-                            <div class="mb-2">
-                                <a href="">Converted Test Clients</a>
-                            </div>
-                            <div class="mb-2">
-                                <a href="">Test Clients On Hold</a>
-                            </div>
-                            <div class="mb-2">
-                                <a href="" class="mb-1">Test Cancele</a>
+                                <div class="mb-2">
+                                    <a href="">Converted Test Clients</a>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="">Test Clients On Hold</a>
+                                </div>
+                                <div class="mb-2">
+                                    <a href="" class="mb-1">Test Cancele</a>
+                                </div>
                             </div>
                         </div>
 
