--- a/favorit_number.html
+++ b/favorit_number.html
@@ -24,105 +24,110 @@
         <!-- sidebar section start -->
         <section class="sidebar-content">
             <div class="mx-3 side_nav">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link active" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
                         <span class="ms-1"> Offshore IT</span>
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+
+                <a class="nav-link mt-3 nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2 "> Dashboard</span>
+                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image ">
+                        <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
 
+
                 <!-- setup dropdown menu start  -->
-                <div id="Setup">
-                    <a class="nav-link active_Link active_side_nav" id="setup-link">
+                <div class="dropdowns_menu nav-sidevar-link ">
+                    <a class="nav-link active_sidnav">
                         <div class="link-icon">
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
-                            <span class="ml-2" id="setup-link-text">
+                            <span class="ml-2">
                                 Setup
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
                         </div>
                     </a>
-                </div>
-                <div class="setup-menu">
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link active_side_nav" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class= ml-2"> Favorite Number</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Billing Setup</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Instruction Path</span>
-                        </div>
-                    </a>
+
+                    <div class="dropdowns_sub_menu mb-3" style="display: block;">
+                        <a class="nav-link" href="ftp_list.html" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
+                            </div>
+                        </a>
+                        <a class="nav-link active_sidnav" href="favorit_number.html" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Billing Setup</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Instruction Path</span>
+                            </div>
+                        </a>
+                    </div>
 
 
+
                 </div>
+
                 <!-- setup dropdown menu end  -->
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2"> Client List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload File</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="uploadImages.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="project_List.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project Billing Quantity</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Payment For Approval</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project For Invoice</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Invoice List</span>
@@ -130,42 +135,43 @@
                 </a>
 
                 <!-- report dropdown memu start  -->
-                <div id="report">
-                    <a class="nav-link" id="report-link">
+                <div class="dropdowns_menu nav-sidevar-link">
+                    <a class="nav-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                            <samp class=" ml-2" id="setup-link-text">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
+                                id="active-sidebar-icon-image">
+                            <span class="sidebar-link-text ml-2">
                                 Report
-                            </samp>
+                            </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
                         </div>
                     </a>
+                    <div class="dropdowns_sub_menu mb-3">
+                        <a class="nav-link" href="client_project_report_samary.html" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Now Client History</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Year Wise Client</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Loss Client</span>
+                            </div>
+                        </a>
 
+
+                    </div>
                 </div>
-                <div class="client-sumarry">
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Now Client History</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Year Wise Client</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Loss Client</span>
-                        </div>
-                    </a>
 
-
-                </div>
                 <!-- report dropdown memu end  -->
 
             </div>
