--- a/project.html
+++ b/project.html
@@ -28,13 +28,13 @@
                 </a>
                 <hr class="solid-divider">
 
-                <a class="nav-link mt-3 " href="#">
+                <a class="nav-link mt-3 nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link active_sidnav" href="project.html">
+                <a class="nav-link nav-sidevar-link active_sidnav" href="project.html">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape.png" alt="" class="sidebar-icon-image">
                         <span class="ml-2">Projects</span>
