--- a/project_List.html
+++ b/project_List.html
@@ -23,8 +23,8 @@
 
 <body>
     <main id="main-content">
-          <!-- sidebar section start -->
-          <section class="sidebar-content">
+           <!-- sidebar section start -->
+        <section class="sidebar-content">
             <div class="mx-3 side_nav">
                 <a class="nav-link active" href="index.html">
                     <div class="top-link-icon">
@@ -34,7 +34,7 @@
                 </a>
                 <hr class="solid-divider">
 
-                <a class="nav-link mt-3" href="#">
+                <a class="nav-link mt-3 nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class=" ml-2"> Dashboard</span>
@@ -43,46 +43,49 @@
 
 
                 <!-- setup dropdown menu start  -->
-                <div id="Setup">
-                    <a class="nav-link" id="setup-link">
+                <div class="dropdowns_menu nav-sidevar-link">
+                    <a class="nav-link">
                         <div class="link-icon">
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                            <span class=" ml-2">
+                            <span class="ml-2">
                                 Setup
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
                         </div>
                     </a>
-                </div>
-                <div class="setup-menu">
-                    <a class="nav-link nav-sidevar-link" href="ftp_list.html" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="favorit_number.html" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Billing Setup</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Instruction Path</span>
-                        </div>
-                    </a>
+
+                    <div class="dropdowns_sub_menu mb-3">
+                        <a class="nav-link" href="ftp_list.html" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="favorit_number.html" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Billing Setup</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Instruction Path</span>
+                            </div>
+                        </a>
+                    </div>
 
 
+
                 </div>
+
                 <!-- setup dropdown menu end  -->
                 <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
@@ -134,8 +137,8 @@
                 </a>
 
                 <!-- report dropdown memu start  -->
-                <div id="report">
-                    <a class="nav-link" id="report-link">
+                <div class="dropdowns_menu nav-sidevar-link">
+                    <a class="nav-link">
                         <div class="link-icon">
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
                                 id="active-sidebar-icon-image">
@@ -145,31 +148,33 @@
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
                         </div>
                     </a>
-                </div>
-                <div class="client-sumarry">
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Now Client History</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Year Wise Client</span>
-                        </div>
-                    </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
-                        <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Loss Client</span>
-                        </div>
-                    </a>
+                    <div class="dropdowns_sub_menu mb-3">
+                        <a class="nav-link" href="client_project_report_samary.html"
+                            id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Now Client History</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Year Wise Client</span>
+                            </div>
+                        </a>
+                        <a class="nav-link" href="#" id="setup-menu-link">
+                            <div class="link-icon ml-3">
+                                <span class="sidebar-link-text ml-2" id="setup-link-text"> Loss Client</span>
+                            </div>
+                        </a>
 
 
+                    </div>
                 </div>
+
                 <!-- report dropdown memu end  -->
 
             </div>
