--- a/Mywork.html
+++ b/Mywork.html
@@ -343,8 +343,8 @@
                                     <div id="modal-instruction">
                                         <div class="modal-content modeal-content-instraction">
                                             <div class="modal-Instruction-title">
-                                                <span class="instruction-close-btn">&times;</span>
-                                                <h2>Modal Title</h2>
+                                                <span class="instruction-close-btn mt-2">&times;</span>
+                                                <h2 class="mt-2">Modal Title</h2>
                                             </div>
                                             <div class="text-center p-2">
                                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. At error
@@ -369,8 +369,8 @@
                                     <div id="note-modal">
                                         <div class="note-modal-content">
                                             <div class="not-modal-title">
-                                                <span class="note-close-btn">&times;</span>
-                                                <h2>Modal Title</h2>
+                                                <span class="note-close-btn mt-2">&times;</span>
+                                                <h2 class="mt-2">Modal Title</h2>
                                             </div>
                                             <div class="text-center p-2">
                                                 <p>FOR CLIPPING</p>
